# app.js
@@ -15,7 +15,6 @@ const poiRouter = require("./routes/poi");
 const userRouter = require("./routes/user");
 const statusRouter = require("./routes/status");
 const categoryRouter = require("./routes/category");
-const tagRouter = require("./routes/tag");
 const gpxFileRouter = require("./routes/gpx-file");
 
 const models = require("./models");
@@ -60,7 +59,6 @@ app.use("/poi", jwtCheck, poiRouter);
 app.use("/user", jwtCheck, userRouter);
 app.use("/status", jwtCheck, statusRouter);
 app.use("/category", jwtCheck, categoryRouter);
-app.use("/tag", jwtCheck, tagRouter);
 app.use("/gpx-file", jwtCheck, gpxFileRouter);
 
 // server Swagger Doc
