# models/tag.js
@@ -1,19 +1,0 @@
-"use strict";
-module.exports = (sequelize, DataTypes) => {
-  const Tag = sequelize.define(
-    "Tag",
-    {
-      name: DataTypes.STRING,
-      image: DataTypes.STRING,
-      color: DataTypes.STRING,
-      group: DataTypes.INTEGER,
-      creatorId: DataTypes.STRING
-    },
-    {}
-  );
-  Tag.associate = function(models) {
-    // associations can be defined here
-    Tag.belongsToMany(models.POI, { through: "POITag" });
-  };
-  return Tag;
-};
